--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,7 @@
 
 <script src="//cdn.jsdelivr.net/sockjs/1.0.0/sockjs.min.js"></script>
 <script>
-var sock = new SockJS('http://effetto.pro:8080/echo');
+var sock = new SockJS('http://ershov.pw:8080/echo');
  sock.onopen = function() {
      console.log('open');
  };
