--- a/index.htm
+++ b/index.htm
@@ -28,7 +28,7 @@
 			<button class="btn btn-lg btn-block btn-warning btn-channel" tabindex="0" data-channel="-1"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span></button>
 		</div>
         <div class="col-xs-4 text-center">
-			<h4>Канал</h4>
+			<h4 id="channel-head">Канал</h4>
 			<div class="channel-wrap ">
 				<div id="channel">
 				1
