--- a/admin/index.htm
+++ b/admin/index.htm
@@ -10,7 +10,10 @@
 
 <body>
 <div class="container">
-    <div class="row" style="margin-top:20%; font-size:150%;">
+    <div class="row" style="margin-top:20px; font-size:40px;">
+		<h2>Адрес в браузере для голосования: <kbd class="link">efe.bz/vote</kbd></h2>
+		<h2>Канал <kbd class="channel-kbd">#<span id="channel">1</span></kbd></h2>
+		<h1>Мнение аудитории: <kbd id="rating">1</kbd></h1>
         <div class="col-sm-offset-1 col-sm-10 col-md-offset-4 col-md-4">
         </div>
         <div class="counter-wrap text-center">
