Сервер шлёт данные сам

--- a/admin/index.htm
+++ b/admin/index.htm
@@ -12,8 +12,10 @@
 <div class="container">
     <div class="row" style="margin-top:20px; font-size:40px;">
 		<h2>Адрес в браузере для голосования: <kbd class="link">efe.bz/vote</kbd></h2>
-		<h2>Канал <kbd class="channel-kbd">#<span id="channel">1</span></kbd></h2>
-		<h1>Мнение аудитории: <kbd id="rating">1</kbd></h1>
+		<h1>
+		Канал <kbd class="channel-kbd"><span id="channel">соединение...</span></kbd>
+		Голос аудитории: <kbd id="rating"></kbd>
+		</h1>
         <div class="col-sm-offset-1 col-sm-10 col-md-offset-4 col-md-4">
         </div>
         <div class="counter-wrap text-center">
