--- a/admin/index.htm
+++ b/admin/index.htm
@@ -23,6 +23,11 @@
 			<div id="placeholder" class="demo-placeholder"></div>
 		</div>
 	</div>
+	
+	<div class="row text-right author">
+	<p>Разработал <a href="https://effetto.pro/professionals/ershov.ilya?utm_source=efe.bz&utm_medium=author&utm_campaign=система%20голосования&utm_term=разработал%20Илья%20Ершов" target="_blank">Илья Ершов</a></p>
+	</div>
+	
 </div><!-- /container -->
 
 
