--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,7 @@
 
 <body>
 <div class="container">
-    <div class="row" style="margin-top:20%; font-size:150%;">
+    <div class="row" style="margin-top:10%; font-size:150%;">
         <div class="col-sm-offset-1 col-sm-10 col-md-offset-4 col-md-4">
         <button class="btn btn-lg btn-block btn-success btn-vote" tabindex="0" data-vote="+1"><span class="glyphicon glyphicon-chevron-up" aria-hidden="true"></span></button>
         <div class="countdown-wrap text-center">
@@ -39,6 +39,11 @@
 			<button class="btn btn-lg btn-block btn-warning btn-channel" tabindex="0" data-channel="+1"><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></button>
         </div>
     </div>
+	
+	<div class="row text-right author">
+	<p>Разработал <a href="https://effetto.pro/professionals/ershov.ilya?utm_source=efe.bz&utm_medium=author&utm_campaign=система%20голосования&utm_term=разработал%20Илья%20Ершов" target="_blank">Илья Ершов</a></p>
+	</div>
+	
 </div>
 
 <script src="js/jquery.min.js"></script>
