Закрытие соединения через 2 часа

--- a/admin/index.htm
+++ b/admin/index.htm
@@ -93,7 +93,10 @@ sock.onopen = function() {
 		},
 		xaxis: {
 			show: false
-		}
+		},
+		lines: { show: true, fill: true },
+		//color: "#FF0000",
+		colors:["#FF0000","#afd8f8","#cb4b4b","#4da74d","#9440ed"]
 	});
 
 	function update() {
